--- a/serverConfig.json
+++ b/serverConfig.json
@@ -1,3 +1,7 @@
 {
-  "couchDbFullpath": "http://admin:admin@127.0.0.1:5984"
+  "couchDbFullpath": "http://admin:admin@127.0.0.1:5984",
+  "incomingPort": 8008,
+  "targetJenkinsUrl": "http://your-jenkins-server:8080/github-webhook/",
+  "webhookPath": "/webhook",
+  "githubWebhookSecret": ""
 }
